--- a/src/main/resources/com/example/discordfx/RelationshipManagement.fxml
+++ b/src/main/resources/com/example/discordfx/RelationshipManagement.fxml
@@ -16,18 +16,18 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="900.0">
                <children>
-                  <TextField fx:id="requestUsername" alignment="CENTER" layoutX="274.0" layoutY="230.0" prefHeight="38.0" prefWidth="352.0" promptText="Target username">
+                  <TextField fx:id="requestUsername" alignment="CENTER" layoutX="260.0" layoutY="251.0" prefHeight="31.0" prefWidth="379.0" promptText="Target username">
                      <cursor>
                         <Cursor fx:constant="TEXT" />
                      </cursor>
                      <font>
                         <Font size="16.0" />
                      </font></TextField>
-                  <Button layoutX="400.0" layoutY="304.0" mnemonicParsing="false" onAction="#sendRequest" prefHeight="32.0" prefWidth="99.0" text="Send">
+                  <Button layoutX="410.0" layoutY="320.0" mnemonicParsing="false" onAction="#sendRequest" prefHeight="31.0" prefWidth="79.0" text="Send">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
-                  <Text fx:id="requestText" layoutX="182.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="535.7366638183594">
+                  <Text fx:id="requestText" layoutX="173.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="535.7366638183594">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -131,6 +131,58 @@
                      </font>
                   </Text>
                   <ImageView fx:id="status_2" fitHeight="50.0" fitWidth="60.0" layoutX="550.0" layoutY="169.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+      <Tab text="Block">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <TextField fx:id="targetUsername" alignment="CENTER" layoutX="260.0" layoutY="249.0" prefHeight="31.0" prefWidth="379.0" promptText="Target username">
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </TextField>
+                  <Button layoutX="410.0" layoutY="320.0" mnemonicParsing="false" onAction="#block" prefHeight="31.0" prefWidth="79.0" text="Block">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Text fx:id="text_3" layoutX="173.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="553.9393310546875">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+      <Tab text="Unblock">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <TextField fx:id="targetUsername_2" alignment="CENTER" layoutX="260.0" layoutY="248.0" prefHeight="31.0" prefWidth="379.0" promptText="Target username">
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </TextField>
+                  <Button layoutX="410.0" layoutY="320.0" mnemonicParsing="false" onAction="#unblock" prefHeight="31.0" prefWidth="79.0" text="Block">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Text fx:id="text_4" layoutX="182.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="535.7366638183594">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Text>
                </children>
             </AnchorPane>
         </content>
