--- a/src/main/resources/com/example/discordfx/RelationshipManagement.fxml
+++ b/src/main/resources/com/example/discordfx/RelationshipManagement.fxml
@@ -32,6 +32,11 @@
                         <Font size="20.0" />
                      </font>
                   </Text>
+                  <Button layoutX="822.0" layoutY="630.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children></AnchorPane>
       </content>
     </Tab>
@@ -83,6 +88,11 @@
                      </font>
                   </Text>
                   <ImageView fx:id="status" fitHeight="50.0" fitWidth="60.0" layoutX="551.0" layoutY="171.0" pickOnBounds="true" preserveRatio="true" />
+                  <Button layoutX="822.0" layoutY="630.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </AnchorPane>
         </content>
@@ -131,6 +141,11 @@
                      </font>
                   </Text>
                   <ImageView fx:id="status_2" fitHeight="50.0" fitWidth="60.0" layoutX="550.0" layoutY="169.0" pickOnBounds="true" preserveRatio="true" />
+                  <Button layoutX="822.0" layoutY="630.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </AnchorPane>
         </content>
@@ -157,6 +172,11 @@
                         <Font size="21.0" />
                      </font>
                   </Text>
+                  <Button layoutX="822.0" layoutY="630.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </AnchorPane>
         </content>
@@ -183,6 +203,11 @@
                         <Font size="20.0" />
                      </font>
                   </Text>
+                  <Button layoutX="822.0" layoutY="630.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </AnchorPane>
         </content>
