--- a/src/main/resources/com/example/discordfx/FriendsManagement.fxml
+++ b/src/main/resources/com/example/discordfx/FriendsManagement.fxml
@@ -1,9 +1,160 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.discordfx.FriendsManagement"
-            prefHeight="400.0" prefWidth="600.0">
-</AnchorPane>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.FriendsManagement">
+  <tabs>
+    <Tab onSelectionChanged="#initialize_1" text="All friends">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Text fx:id="textStatus_1" layoutX="273.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="354.13671875">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                  </Text>
+                  <ImageView fx:id="profileImage_1" fitHeight="142.0" fitWidth="202.0" layoutX="362.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="status_1" fitHeight="50.0" fitWidth="60.0" layoutX="560.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true" />
+                  <Text fx:id="username_1" layoutX="273.0" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="354.13671875">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                  </Text>
+                  <Button fx:id="previousButton_1" layoutX="235.0" layoutY="342.0" mnemonicParsing="false" onAction="#previous_1" text="Previous">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="removeFriend_1" layoutX="381.0" layoutY="342.0" mnemonicParsing="false" onAction="#removeFriend_1" prefHeight="31.0" prefWidth="138.0" text="Remove friend" textFill="#ef0f0f">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="nextButton_1" layoutX="590.0" layoutY="342.0" mnemonicParsing="false" onAction="#next_1" prefHeight="31.0" prefWidth="74.0" text="Next">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button layoutX="822.0" layoutY="630.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+               </children></AnchorPane>
+      </content>
+    </Tab>
+    <Tab onSelectionChanged="#initialize_2" text="Online friends">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" onDragDetected="#initialize_2" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="profileImage_2" fitHeight="142.0" fitWidth="202.0" layoutX="362.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true" />
+                  <Text fx:id="textStatus_2" layoutX="273.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="354.13671875">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                  </Text>
+                  <ImageView fx:id="status_2" fitHeight="50.0" fitWidth="60.0" layoutX="560.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true" />
+                  <Text fx:id="username_2" layoutX="273.0" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="354.13671875">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                  </Text>
+                  <Button fx:id="previousButton_2" layoutX="235.0" layoutY="342.0" mnemonicParsing="false" onAction="#previous_2" text="Previous">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="removeFriend_2" layoutX="381.0" layoutY="342.0" mnemonicParsing="false" onAction="#removeFriend_2" prefHeight="31.0" prefWidth="138.0" text="Remove friend" textFill="#ef0f0f">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="nextButton_2" layoutX="590.0" layoutY="342.0" mnemonicParsing="false" onAction="#next_2" prefHeight="31.0" prefWidth="74.0" text="Next">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button layoutX="822.0" layoutY="630.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+               </children></AnchorPane>
+      </content>
+    </Tab>
+      <Tab onSelectionChanged="#initialize_3" text="Blocked">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" onDragDetected="#initialize_2" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="profileImage_3" fitHeight="142.0" fitWidth="202.0" layoutX="362.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true" />
+                  <Text fx:id="textStatus_3" layoutX="273.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="354.13671875">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                  </Text>
+                  <ImageView fx:id="status_3" fitHeight="50.0" fitWidth="60.0" layoutX="560.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true" />
+                  <Text fx:id="username_3" layoutX="273.0" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="354.13671875">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                  </Text>
+                  <Button fx:id="previousButton_3" layoutX="235.0" layoutY="342.0" mnemonicParsing="false" onAction="#previous_3" text="Previous">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="unblock" layoutX="381.0" layoutY="342.0" mnemonicParsing="false" onAction="#unblock" prefHeight="31.0" prefWidth="138.0" text="Unblock" textFill="#10bf1f">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="nextButton_3" layoutX="590.0" layoutY="342.0" mnemonicParsing="false" onAction="#next_3" prefHeight="31.0" prefWidth="74.0" text="Next">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button layoutX="822.0" layoutY="630.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+  </tabs>
+</TabPane>
