--- a/src/main/resources/com/example/discordfx/FileDownloader.fxml
+++ b/src/main/resources/com/example/discordfx/FileDownloader.fxml
@@ -3,37 +3,52 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
-<AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.FileDownloader">
+<AnchorPane fx:id="root" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.FileDownloader">
    <children>
-      <TextField fx:id="fileName" alignment="CENTER" layoutX="232.0" layoutY="289.0" prefHeight="40.0" prefWidth="434.0" promptText="Name of file">
-         <font>
-            <Font size="18.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="TEXT" />
-         </cursor>
-      </TextField>
-      <Button layoutX="390.0" layoutY="367.0" mnemonicParsing="false" onAction="#download" prefHeight="34.0" prefWidth="119.0" text="Download">
-         <font>
-            <Font size="14.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
       <Text fx:id="text" layoutX="167.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="566.7392501831055">
          <font>
             <Font size="21.0" />
          </font>
       </Text>
-      <Button layoutX="822.0" layoutY="659.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="64.0" text="Back">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
+      <AnchorPane fx:id="anchorPane" layoutX="148.0" layoutY="144.0" prefHeight="492.0" prefWidth="666.0">
+         <children>
+            <Button layoutX="553.0" layoutY="419.0" mnemonicParsing="false" onAction="#back" prefHeight="50.0" prefWidth="92.0" text="Back">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <TextField fx:id="fileName" alignment="CENTER" layoutX="124.0" layoutY="139.0" prefHeight="40.0" prefWidth="434.0" promptText="Name of file">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor>
+            </TextField>
+            <Button fx:id="download" layoutX="229.0" layoutY="221.0" maxHeight="50.0" mnemonicParsing="false" onAction="#download" prefHeight="50.0" prefWidth="224.0" text="Download">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+         </children>
+      </AnchorPane>
+      <Pane fx:id="circle" layoutX="394.0" layoutY="21.0" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <ImageView fitHeight="142.0" fitWidth="142.0" layoutX="29.0" layoutY="29.0">
+               <image>
+                  <Image url="../../../../../../Icon/downloadBigIcon.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
