--- a/src/main/resources/com/example/discordfx/SetStatus.fxml
+++ b/src/main/resources/com/example/discordfx/SetStatus.fxml
@@ -2,26 +2,52 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.SetStatus">
+<AnchorPane fx:id="root" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.SetStatus">
    <children>
-      <Button layoutX="381.0" layoutY="166.0" mnemonicParsing="false" onAction="#Online" prefHeight="37.0" prefWidth="138.0" text="Online" />
-      <Button layoutX="381.0" layoutY="248.0" mnemonicParsing="false" onAction="#Idle" prefHeight="37.0" prefWidth="138.0" text="Idle" />
-      <Button layoutX="381.0" layoutY="331.0" mnemonicParsing="false" onAction="#Do_Not_Disturb" prefHeight="37.0" prefWidth="138.0" text="Do_Not_Disturb" />
-      <Button layoutX="381.0" layoutY="415.0" mnemonicParsing="false" onAction="#Invisible" prefHeight="37.0" prefWidth="138.0" text="Invisible" />
+      <AnchorPane fx:id="anchorPane" layoutX="101.0" layoutY="102.0" prefHeight="567.0" prefWidth="703.0">
+         <children>
+            <Button id="back" fx:id="back" layoutX="529.0" layoutY="480.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="64.0" text="Back">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="232.0" layoutY="378.0" mnemonicParsing="false" onAction="#Invisible" prefHeight="50.0" prefWidth="239.0" text="Invisible" textAlignment="RIGHT">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="232.0" layoutY="298.0" mnemonicParsing="false" onAction="#Do_Not_Disturb" prefHeight="50.0" prefWidth="239.0" text="Do Not Disturb" textAlignment="RIGHT">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="232.0" layoutY="224.0" mnemonicParsing="false" onAction="#Idle" prefHeight="50.0" prefWidth="239.0" text="Idle" textAlignment="RIGHT">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="232.0" layoutY="144.0" mnemonicParsing="false" onAction="#Online" prefHeight="50.0" prefWidth="239.0" text="Online" textAlignment="RIGHT">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Pane fx:id="circle" layoutX="241.0" layoutY="-97.0" prefHeight="222.0" prefWidth="222.0">
+               <children>
+                  <Label fx:id="setStatus" layoutX="25.0" layoutY="86.0" prefHeight="51.0" prefWidth="173.0" text="Set Status" />
+               </children>
+            </Pane>
+         </children>
+      </AnchorPane>
       <Text fx:id="text" layoutX="113.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="673.1392211914062">
          <font>
             <Font size="21.0" />
          </font>
       </Text>
-      <Button layoutX="822.0" layoutY="659.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="64.0" text="Back">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
    </children>
 </AnchorPane>
