--- a/src/main/resources/com/example/discordfx/ShowServerChats.fxml
+++ b/src/main/resources/com/example/discordfx/ShowServerChats.fxml
@@ -1,14 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.discordfx.ShowServerChats"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.ShowServerChats">
+   <children>
+      <Text fx:id="text" layoutX="220.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="459.8497619628906">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </Text>
+      <ImageView fx:id="serverProfileImage" fitHeight="150.0" fitWidth="200.0" layoutX="350.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true" />
+      <Text fx:id="serverChatName" layoutX="257.0" layoutY="344.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="386.7392578125">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </Text>
+      <Button fx:id="previousButton" layoutX="219.0" layoutY="383.0" mnemonicParsing="false" onAction="#previous" text="Previous">
+         <font>
+            <Font size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="nextButton" layoutX="605.0" layoutY="383.0" mnemonicParsing="false" onAction="#next" prefHeight="31.0" prefWidth="77.0" text="Next">
+         <font>
+            <Font size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="380.0" layoutY="383.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="138.0" text="Join" textFill="#ed11b7">
+         <font>
+            <Font size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="822.0" layoutY="659.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="381.0" layoutY="471.0" mnemonicParsing="false" onAction="#makeDserver" prefHeight="31.0" prefWidth="138.0" text="Make server chat" textFill="#2313eb">
+         <font>
+            <Font size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+   </children>
 </AnchorPane>
